# video-factory

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/worker/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/worker/src/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py
apps/worker/src/core/: __init__.py  ai_client.py  material_fetcher.py  subtitle_gen.py  task_logger.py  tts_engine.py  video_generator.py
apps/worker/src/publishers/: __init__.py  base.py  douyin.py  xiaohongshu.py
apps/worker/tests/: conftest.py  test_ai_client.py  test_ai_client_deep.py  test_ai_client_full.py  test_ai_settings_route.py  test_config.py  test_core_coverage.py  test_core_deep.py  test_core_extra.py  test_coverage_boost.py  test_database.py  test_database_deep.py  test_database_extra.py  test_database_full.py  test_final_boost.py  test_general_settings_route.py  test_hot_topics_full.py  test_hot_topics_more.py  test_main.py  test_main_deep.py  test_main_full.py  test_material_fetcher.py  test_material_fetcher_full.py  test_material_more.py  test_models.py  test_news_api_full.py  test_publishers_base.py  test_publishers_base_full.py  test_publishers_coverage.py  test_publishers_deep.py  test_publishers_douyin.py  test_publishers_full.py  test_publishers_more.py  test_publishers_xiaohongshu.py  test_routes_comprehensive.py  test_routes_endpoints.py  test_routes_init.py  test_routes_integration.py  test_routes_low_coverage.py  test_routes_mocks.py  (+41 more)
(+87 files in other folders)
